# QtDBus

./: CMakeLists.txt
adaptor/: CMakeLists.txt  adaptor.sh
proxy/: CMakeLists.txt
qdbus/: CMakeLists.txt
signal/: client.cpp  client.h  service.cpp
struct/: CMakeLists.txt  book.cpp  book.h  com.scorpio.test.xml  interface.cpp  message.cpp  proxy.cpp  test.cpp  test.h  testInterface.h  valueAdaptor.cpp  valueAdaptor.h
